# NTupleAnalyzer_v2

./: CMakeLists.txt  README.md
NTupAnalyser/: Common.h  HcAnalyse.h  HistosSave.h  TruthHelper.h
Root/: Common.cxx  HcAnalyse.cxx  HistosSave.cxx  LinkDef.h  TruthHelper.cxx
configs/: bbh_hf.root  bkg_VBF_dr0p5.config  bkg_Wmin_dr0p5.config  bkg_Wplus_dr0p5.config  bkg_bbH_dr0p5.config  bkg_ggZH_dr0p5.config  bkg_ggf_dr0p5.config  bkg_myy90_175_dr0p5.config  bkg_qqZH_dr0p5.config  bkg_tHW_dr0p5.config  bkg_tHjb_dr0p5.config  bkg_ttH_dr0p5.config  ch_hf.root  data.config  gamgam.config  grid_bkg_myy90_175_dr1p5.config  grid_data_dr1p5.config  sherpa.config  submit_cores.sh
data/: hc_gamgam_prod1.config
macros/: AtlasLabels.C  AtlasLabels.h  AtlasStyle.C  AtlasUtils.C  AtlasUtils.h
python/: MCplots.py  Optimization.py
util/: run_analyser.cxx  run_ntuple.cxx
